--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "private": true,
-  "displayName": "Plugin Name",
-  "name": "homebridge-plugin-name",
+  "displayName": "Homebridge Enviro Urban",
+  "name": "homebridge-envirourban",
   "version": "1.0.0",
-  "description": "A short description about what your plugin does.",
+  "description": "Fetches information from Enviro Urban sensors for air quality.",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/USERNAME/GITHUB_PROJECT_NAME.git"
+    "url": "git+https://github.com/mhawkshaw/homebridge-envirourban.git"
   },
   "bugs": {
-    "url": "https://github.com/USERNAME/GITHUB_PROJECT_NAME/issues"
+    "url": "https://github.com/mhawkshaw/homebridge-envirourban/issues"
   },
   "engines": {
     "node": ">=14.18.1",
@@ -26,7 +25,6 @@
   "keywords": [
     "homebridge-plugin"
   ],
-  "dependencies": {},
   "devDependencies": {
     "@types/node": "^16.10.9",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -37,5 +35,10 @@
     "rimraf": "^3.0.2",
     "ts-node": "^10.3.0",
     "typescript": "^4.4.4"
+  },
+  "homepage": "https://github.com/mhawkshaw/homebridge-envirourban#readme",
+  "dependencies": {
+    "async-mqtt": "^2.6.2",
+    "mqtt": "^4.3.7"
   }
 }
