--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "prepublishOnly": "npm run lint && npm run build"
   },
   "keywords": [
-    "homebridge-envirourban"
+    "homebridge-plugin"
   ],
   "devDependencies": {
     "@eslint/js": "^9.36.0",
